--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@strapi/plugin-cloud": "4.17.1",
     "@strapi/plugin-i18n": "4.17.1",
     "@strapi/plugin-users-permissions": "4.17.1",
+    "@strapi/provider-upload-cloudinary": "^4.23.0",
     "@strapi/strapi": "4.17.1",
     "better-sqlite3": "8.6.0",
+    "pg": "^8.11.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-"pg": "^8.11.3",
     "react-router-dom": "5.3.4",
     "stripe": "^14.14.0",
     "styled-components": "5.3.3"
